--- a/VisionFaceTrack/Base.lproj/Main.storyboard
+++ b/VisionFaceTrack/Base.lproj/Main.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,26 +12,41 @@
         <!--ViewController-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController title="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="VisionSwiftTrack" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="VisionFaceTrack" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mP4-Op-A0V">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mP4-Op-A0V">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fll-SD-qJI" userLabel="Video View" customClass="VideoPlay" customModule="VisionFaceTrack" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Fll-SD-qJI" firstAttribute="top" secondItem="mP4-Op-A0V" secondAttribute="top" id="JRp-5a-obT"/>
+                            <constraint firstItem="Fll-SD-qJI" firstAttribute="trailing" secondItem="mP4-Op-A0V" secondAttribute="trailing" id="NHL-R8-b3W"/>
+                            <constraint firstAttribute="trailing" secondItem="Fll-SD-qJI" secondAttribute="trailing" id="Oz4-8O-EeX"/>
+                            <constraint firstItem="Fll-SD-qJI" firstAttribute="bottom" secondItem="mP4-Op-A0V" secondAttribute="bottom" id="SPR-Hz-fhm"/>
+                            <constraint firstItem="Fll-SD-qJI" firstAttribute="leading" secondItem="mP4-Op-A0V" secondAttribute="leading" id="Xkj-FM-IiE"/>
+                            <constraint firstItem="Fll-SD-qJI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="bIr-uG-NKe"/>
+                            <constraint firstItem="Fll-SD-qJI" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dv5-66-Gh6"/>
+                            <constraint firstAttribute="bottom" secondItem="Fll-SD-qJI" secondAttribute="bottom" id="zfs-eu-PYj"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="previewView" destination="mP4-Op-A0V" id="zS5-gc-9O7"/>
+                        <outlet property="videoView" destination="Fll-SD-qJI" id="VoN-JN-ymW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="132" y="133.00492610837438"/>
         </scene>
     </scenes>
 </document>
