text appears when face is close

--- a/VisionFaceTrack/Base.lproj/Main.storyboard
+++ b/VisionFaceTrack/Base.lproj/Main.storyboard
@@ -28,20 +28,41 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Real me is unavailable rn. I can tell them what you say in the next " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="9" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cj7-u3-bSb" userLabel="Text Label">
+                                <rect key="frame" x="-89" y="367.66666666666669" width="553" height="76.666666666666686"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="553" id="2Yi-fk-A4s"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30 seconds" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="9" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="886-t1-iul" userLabel="Time Label">
+                                <rect key="frame" x="89.666666666666671" y="573" width="152.66666666666663" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Kj8-zT-DtO" firstAttribute="top" secondItem="Fll-SD-qJI" secondAttribute="top" id="BF1-8G-PM1"/>
+                            <constraint firstItem="Cj7-u3-bSb" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Chf-9v-eov"/>
                             <constraint firstItem="Fll-SD-qJI" firstAttribute="top" secondItem="mP4-Op-A0V" secondAttribute="top" id="JRp-5a-obT"/>
                             <constraint firstItem="Kj8-zT-DtO" firstAttribute="bottom" secondItem="Fll-SD-qJI" secondAttribute="bottom" id="LRA-aA-FGd"/>
                             <constraint firstItem="Fll-SD-qJI" firstAttribute="trailing" secondItem="mP4-Op-A0V" secondAttribute="trailing" id="NHL-R8-b3W"/>
+                            <constraint firstItem="886-t1-iul" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-21.5" id="Oha-6Z-fcD"/>
                             <constraint firstAttribute="trailing" secondItem="Fll-SD-qJI" secondAttribute="trailing" id="Oz4-8O-EeX"/>
                             <constraint firstItem="Fll-SD-qJI" firstAttribute="bottom" secondItem="mP4-Op-A0V" secondAttribute="bottom" id="SPR-Hz-fhm"/>
                             <constraint firstItem="Fll-SD-qJI" firstAttribute="leading" secondItem="mP4-Op-A0V" secondAttribute="leading" id="Xkj-FM-IiE"/>
                             <constraint firstItem="Kj8-zT-DtO" firstAttribute="trailing" secondItem="Fll-SD-qJI" secondAttribute="trailing" id="aKi-ch-uoD"/>
                             <constraint firstItem="Fll-SD-qJI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="bIr-uG-NKe"/>
                             <constraint firstItem="Fll-SD-qJI" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dv5-66-Gh6"/>
+                            <constraint firstItem="Cj7-u3-bSb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gfj-aT-Akg"/>
+                            <constraint firstItem="Cj7-u3-bSb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="j0H-eg-aYl"/>
                             <constraint firstItem="Kj8-zT-DtO" firstAttribute="leading" secondItem="Fll-SD-qJI" secondAttribute="leading" id="kAK-6w-TPW"/>
+                            <constraint firstItem="Cj7-u3-bSb" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="qxW-nv-XFI"/>
+                            <constraint firstItem="886-t1-iul" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="185" id="yUb-Bu-sAt"/>
                             <constraint firstAttribute="bottom" secondItem="Fll-SD-qJI" secondAttribute="bottom" id="zfs-eu-PYj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -49,6 +70,8 @@
                     <connections>
                         <outlet property="imageView" destination="Kj8-zT-DtO" id="iS1-gg-Jww"/>
                         <outlet property="previewView" destination="mP4-Op-A0V" id="zS5-gc-9O7"/>
+                        <outlet property="textLabel" destination="Cj7-u3-bSb" id="dbj-8j-4OC"/>
+                        <outlet property="timeLabel" destination="886-t1-iul" id="F9M-6L-4mg"/>
                         <outlet property="videoView" destination="Fll-SD-qJI" id="VoN-JN-ymW"/>
                     </connections>
                 </viewController>
